-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b31
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014164 | 8 | Mikael Gerdin | P2 | Closed | Fixed | b89 |
The fix for JDK-8011802 introduced a bug where if we hit a GC when calling init_dependencies the _class_loader oop in the CLD became stale since we had not yet added the CLD to the CLDG.
We need to revisit the initialization order to not loose track of any oops in the CLD.
We need to revisit the initialization order to not loose track of any oops in the CLD.
- backported by
-
JDK-8014164 NPG: Parallel class loading tests fail after fix for JDK-8011802
-
- Closed
-
- relates to
-
JDK-8011802 NPG: init_dependencies in class loader data graph can cause invalid CLD
-
- Closed
-