8013136: NPG: Parallel class loading tests fail after fix for JDK-8011802

Move initialization of dependencies to before allocation of CLD

Reviewed-by: stefank, coleenp